# nanashi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ROADMAP.md
src/: action.rs  app.rs  effect.rs  event.rs  format.rs  input.rs  main.rs  model.rs  style.rs
src/client/: api.rs  mod.rs  response.rs
src/keybinds/: file.rs  key.rs  mod.rs
src/ui/: boards.rs  component.rs  mod.rs  replies.rs  status.rs  threads.rs
