[package]
name = "nanashi"
version = "0.1.0"
authors = ["jtieri <37750742+jtieri@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "Browse 4chan from your terminal. A keyboard-driven imageboard client."
readme = "README.md"
keywords = ["tui", "4chan", "imageboard", "terminal", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/jtieri/nanashi"
homepage = "https://github.com/jtieri/nanashi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "native-tls-alpn"]  }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tui = "0.16"
termion = "1.5"
chrono = "0.4"
htmlescape="0.3"
regex="1.4"
voca_rs="1.13"
clipboard = "0.5"
open = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
