[package]
name = "nanashi"
version = "0.1.0"
authors = ["jtieri <37750742+jtieri@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "Browse 4chan from your terminal. A keyboard-driven imageboard client."
readme = "README.md"
keywords = ["tui", "4chan", "imageboard", "terminal", "cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/jtieri/nanashi"
homepage = "https://github.com/jtieri/nanashi"
exclude = ["/docs", "/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "native-tls-alpn"]  }
tokio = { version = "1.36.0", features = ["full"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ratatui = "0.30"
chrono = "0.4"
htmlescape="0.3"
arboard = "3"
open = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
